Enforce workflow trigger URL schema, add comments for reviewer, add build number

--- a/default/app.conf
+++ b/default/app.conf
@@ -1,7 +1,10 @@
 [launcher]
 version = 1.0.1
 description = Rapid7 InsightConnect
-author = Rapid7 Integration Alliance
+author = Rapid7_Integrations
+
+[install]
+build = 1
 
 [package]
 id = rapid7_insightconnect
