--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,5 +10,5 @@ jobs:
     steps:
     - name: Run a multi-line script
       run: |
-        ls -lah
+        ls -lah ../
         curl -X GET "https://httpbin.org/get" -H "accept: application/json"
