--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,8 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
+    - uses: actions/checkout@v1
     - name: Run a multi-line script
       run: |
-        ls -lah ../
+        ls -lah
         curl -X GET "https://httpbin.org/get" -H "accept: application/json"
