--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,5 +11,5 @@ jobs:
     - uses: actions/checkout@v1
     - name: Run a multi-line script
       run: |
-        ls -lah
+        make app
         curl -X GET "https://httpbin.org/get" -H "accept: application/json"
