--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,9 @@ jobs:
     
     steps:
     - uses: actions/checkout@v1
+    - with: 
+            username: ${{ secrets.ci_splunkbase_username }}
+            password: ${{ secrets.ci_splunkbase_password }}
     - name: Run a multi-line script
       run: |
         make app
