--- a/spec.yaml
+++ b/spec.yaml
@@ -1,4 +1,4 @@
-extension: workflow
+extension: standalone
 product: [insightconnect]
 name: icon_splunk_app
 title: Rapid7 InsightConnect App for Splunk
@@ -9,7 +9,7 @@ vendor: rapid7
 status: []
 support: rapid7
 hub_tags:
-  use_cases: [alert_enrichment, soar]
+  use_cases: [soar, siem, threat_hunting, reporting_and_analytics, log_search, threat_detection_and_response, data_aggregation, data_ingestion, alerting_and_notifications, soc_automation]
   keywords: [splunk, insightconnect, event forwarding]
   features: []
 resources:
