--- a/default/alert_actions.conf
+++ b/default/alert_actions.conf
@@ -4,3 +4,4 @@ label = Send to Rapid7 InsightConnect
 description = Send information from Splunk to Rapid7 InsightConnect
 icon_path = appIcon.png
 payload_format = json
+python.version = python3
