--- a/local/restmap.conf
+++ b/local/restmap.conf
@@ -13,3 +13,4 @@ python.version = python3
 handlertype = python
 handlerfile = rapid7_insightconnect_rh_settings.py
 handleractions = edit, list
+python.version = python3
